# extractini

./: pyproject.toml
tests/: test.ini  test_extractini.py
